magiccap-api/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: magiccap-api
spec:
  replicas: 2
  serviceName: magiccap-api
  selector:
    matchLabels:
      run: magiccap-api
  template:
    metadata:
      labels:
        run: magiccap-api
    spec:
      containers:
      - name: magiccap-api
        image: registry.gitlab.com/jakemakesstuff/magiccap-api-v3
        imagePullPolicy: "Always"
        ports:
        - containerPort: 8000
        readinessProbe:
          httpGet:
            port: 8000
            path: /version/latest
          initialDelaySeconds: 3
          periodSeconds: 3
        livenessProbe:
          httpGet:
            port: 8000
            path: /version/latest
          initialDelaySeconds: 10
          periodSeconds: 10
      imagePullSecrets:
      - name: gitlab
