magiccap-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magiccap-api
  labels:
    run: magiccap-api
spec:
  ports:
  - port: 8000
    protocol: TCP
  selector:
    run: magiccap-api
