magiccap-api/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: magiccap-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - api.magiccap.me
    secretName: magiccap-api-prod-letsencrypt
  rules:
  - host: api.magiccap.me
    http:
      paths:
      - path: /
        backend:
          serviceName: magiccap-api
          servicePort: 8000
